--- a/samples/hello_ar_java/app/src/main/res/layout-land/activity_main.xml
+++ b/samples/hello_ar_java/app/src/main/res/layout-land/activity_main.xml
@@ -20,15 +20,71 @@
     android:layout_height="match_parent"
     tools:context="com.google.ar.core.examples.java.helloar.ShootingGalleryActivity">
 
-  <android.opengl.GLSurfaceView
-      android:id="@+id/surfaceview"
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_gravity="top"
-      android:layout_marginTop="-230dp" />
+  <Button
+      android:id="@+id/switchButton"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_alignParentStart="true"
+      android:layout_alignParentTop="true"
+      android:layout_marginStart="10dp"
+      android:layout_marginTop="10dp"
+      android:fontFamily="@font/space_font_ttf"
+      android:text="@string/scanning_button" />
+
+  <TextView
+      android:id="@+id/pointsView"
+      android:layout_width="109dp"
+      android:layout_height="wrap_content"
+      android:layout_alignParentTop="true"
+      android:layout_alignParentRight="true"
+      android:layout_marginStart="65dp"
+      android:layout_marginTop="25dp"
+      android:layout_marginEnd="88dp"
+      android:layout_marginRight="357dp"
+      android:layout_toStartOf="@+id/timeView"
+      android:layout_toEndOf="@+id/switchButton"
+      android:width="200dp"
+      android:fontFamily="@font/space_font_ttf"
+      android:text="@string/points_label"
+      android:textAlignment="textStart"
+      android:textSize="20sp"
+      android:translationZ="10dp" />
+
+  <TextView
+      android:id="@+id/timeView"
+      android:layout_width="152dp"
+      android:layout_height="wrap_content"
+      android:layout_alignParentTop="true"
+      android:layout_alignParentEnd="true"
+      android:layout_alignParentRight="true"
+      android:layout_marginStart="262dp"
+      android:layout_marginTop="27dp"
+      android:layout_marginEnd="209dp"
+      android:layout_marginRight="210dp"
+      android:layout_toEndOf="@+id/switchButton"
+      android:width="150dp"
+      android:fontFamily="@font/space_font_ttf"
+      android:text="@string/time_label"
+      android:textAlignment="textStart"
+      android:textSize="20sp"
+      android:translationZ="10dp" />
 
   <ImageView
-      android:id="@+id/imageView3"
+      android:id="@+id/imageReticle"
+      android:layout_width="153dp"
+      android:layout_height="58dp"
+      android:layout_centerInParent="true"
+      android:contentDescription="blaster"
+      android:translationZ="10dp"
+      app:srcCompat="@drawable/red_reticle" />
+
+  <android.opengl.GLSurfaceView
+      android:id="@+id/surfaceview"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent" />
+
+  <ImageView
+      android:id="@+id/imageBlaster"
       android:layout_width="292dp"
       android:layout_height="233dp"
       android:layout_alignParentStart="true"
