--- a/samples/hello_ar_java/app/src/main/res/layout/customizationitem.xml
+++ b/samples/hello_ar_java/app/src/main/res/layout/customizationitem.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root"
     android:layout_width="match_parent"
-    android:layout_height="80dp">
+    android:layout_height="60dp">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/customizationItem"
@@ -13,8 +13,8 @@
 
         <ImageView
             android:id="@+id/customizationImage"
-            android:layout_width="76dp"
-            android:layout_height="72dp"
+            android:layout_width="44dp"
+            android:layout_height="39dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.07"
@@ -26,10 +26,12 @@
             android:id="@+id/customizationName"
             android:layout_width="269dp"
             android:layout_height="40dp"
+            android:layout_marginStart="16dp"
             android:text="Customization Name"
             android:textSize="30sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.6"
             app:layout_constraintStart_toEndOf="@+id/customizationImage"
             app:layout_constraintTop_toTopOf="parent" />
     </android.support.constraint.ConstraintLayout>
