--- a/samples/hello_ar_java/app/src/main/res/layout/activity_owned_menu.xml
+++ b/samples/hello_ar_java/app/src/main/res/layout/activity_owned_menu.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/custom_bg"
     tools:context=".OwnedMenuActivity">
 
 
@@ -15,11 +16,14 @@
         android:layout_marginTop="16dp"
         android:text="@string/o_menu_button"
         android:textSize="20dp"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textTitle"
+        android:textColor="@android:color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
@@ -27,7 +31,9 @@
         android:text="@string/owned_label"
         android:textAlignment="center"
         android:textSize="35dp"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/buttonMenu" />
 
     <ListView
