--- a/samples/hello_ar_java/app/src/main/res/layout/customizationitem.xml
+++ b/samples/hello_ar_java/app/src/main/res/layout/customizationitem.xml
@@ -26,6 +26,7 @@
             android:id="@+id/customizationName"
             android:layout_width="269dp"
             android:layout_height="40dp"
+            android:textColor="@android:color/white"
             android:layout_marginStart="16dp"
             android:text="Customization Name"
             android:textSize="30sp"
